@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020161002"
-#define public MagickPackageReleaseDate "snapshot-20161002"
+#define public MagickPackageVersionAddendum ".020161004"
+#define public MagickPackageReleaseDate "snapshot-20161004"
