@@ -1,3 +1,9 @@
+2016-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/attribute.c (GenerateEXIFAttribute): Fixed SourceForge
+	bug 400 "Exif orientation unknown for some JPEG files".  Patch
+	submitted by Troy Patteson.
+
 2016-10-02  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/wpg.c Add sanity check for palette.
